# codespaces-blank

./: CMakeLists.txt  LICENSE  README.md  install.bash  package.xml
.github/workflows/: CI.yml
docs/: Doxyfile
docs/html/: _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_detect_object-members.html  class_detect_object.html  class_detect_object.js  class_detect_object_a7519c718bcc0a8a068fc55dc29ab2ca1_cgraph.map  class_detect_object_a7519c718bcc0a8a068fc55dc29ab2ca1_cgraph.md5  class_detect_object_aaed8e7d735e79be818a7d0d0f9ff0989_cgraph.map  class_detect_object_aaed8e7d735e79be818a7d0d0f9ff0989_cgraph.md5  class_navigation-members.html  class_navigation.html  class_navigation.js  class_navigation__coll__graph.map  class_navigation__coll__graph.md5  class_navigation_a001f155e15619df08a980438173d7b2e_cgraph.map  class_navigation_a001f155e15619df08a980438173d7b2e_cgraph.md5  class_object_spawner-members.html  class_object_spawner.html  class_object_spawner.js  classes.html  cppcheck_8txt.html  cpplint_8txt.html  detection_8cpp.html  detection_8cpp__incl.map  detection_8cpp__incl.md5  detection_8cpp_source.html  detection_8hpp.html  detection_8hpp__dep__incl.map  detection_8hpp__dep__incl.md5  detection_8hpp__incl.map  detection_8hpp__incl.md5  detection_8hpp_source.html  detection__test_8cpp.html  detection__test_8cpp.js  detection__test_8cpp__incl.map  detection__test_8cpp__incl.md5  detection__test_8cpp_a0ef4f6e3628b5f9043ec6d342f268696_cgraph.map  detection__test_8cpp_a0ef4f6e3628b5f9043ec6d342f268696_cgraph.md5  (+81 more)
docs/html/search/: all_2.js  all_5.js  all_6.js  all_8.js  all_d.js  all_e.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_8.js  searchdata.js  variables_2.js  variables_5.js  variables_6.js  variables_7.js  variables_a.js  variables_b.js
docs/latex/: annotated.tex  class_detect_object.tex  class_detect_object_a7519c718bcc0a8a068fc55dc29ab2ca1_cgraph.md5  class_detect_object_aaed8e7d735e79be818a7d0d0f9ff0989_cgraph.md5  class_navigation__coll__graph.md5  class_navigation_a001f155e15619df08a980438173d7b2e_cgraph.md5  class_object_spawner.tex  cppcheck_8txt.tex  cpplint_8txt.tex  detection_8cpp.tex  detection_8cpp__incl.md5  detection_8hpp.tex  detection__test_8cpp.tex  detection__test_8cpp__incl.md5  detection__test_8cpp_a0ef4f6e3628b5f9043ec6d342f268696_cgraph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_51cadfe18b9bd77ad0affdb7abae7018.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  md__r_e_a_d_m_e.tex  navigation_8cpp.tex  navigation_8cpp__incl.md5  navigation_8hpp.tex  navigation_8hpp__dep__incl.md5  navigation_8hpp__incl.md5  navigation__node_8cpp.tex  navigation__node_8cpp__incl.md5  navigation__test_8cpp__incl.md5  navigation__test_8cpp_a73bc6736e5c8a7979567e69b447731f8_cgraph.md5  object__spawner_8cpp.tex  object__spawner_8cpp__incl.md5  object__spawner_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  object__spawner_8hpp.tex  object__spawner_8hpp__dep__incl.md5  object__spawner__test_8cpp.tex  object__spawner__test_8cpp__incl.md5  object__spawner__test_8cpp_ab275629c73bb4b82efe6a60ff0af5161_cgraph.md5  refman.tex
include/wall-e/: detection.hpp  navigation.hpp  object_spawner.hpp
launch/: explorer_move_base.launch  gazebo.launch  gazebo.launch.py  multiple_robots.launch  navigation.launch  simulation.launch
launch/mapping/: bringup.launch  start_mapping.launch  start_navigation.launch
param/: aruco_lookup.yaml
results/: cppcheck.txt  cpplint.txt
rviz/: rviz.rviz
src/: detection.cpp  main.cpp  navigation.cpp  navigation_node.cpp  object_spawner.cpp
test/: detection_test.cpp  main_test.cpp  main_test.test  navigation_test.cpp  object_spawner_test.cpp
world/: final_world.world
